# Graphics-engine

./: .gitignore  CMakeLists.txt
src/: camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
src/shaders/: basic-fragment.glsl  basic-vertex.glsl
